--- a/css/pets.css
+++ b/css/pets.css
@@ -29,6 +29,8 @@ body{
 .navbar-container .logo-container{
     height: 100%;
     width: 25%;
+    z-index: 2;
+    background-color: rgb(32, 32, 32);
 }
 .navbar-container .logo-container a{
     text-decoration: none;
@@ -71,6 +73,7 @@ body{
     right: 5%;
     display: none;
     cursor: pointer;
+    z-index: 2;
 }
 .navbar-container .burguer-menu div{
     height: 6px;
