--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,8 @@ body{
 .navbar-container .logo-container{
     height: 100%;
     width: 25%;
+    z-index: 2;
+    background-color: rgb(32, 32, 32);
 }
 .navbar-container .logo-container a{
     text-decoration: none;
@@ -49,6 +51,7 @@ body{
 }
 .nav-links ul{
     width: 100%;
+
 }
 .navbar-container .nav-links li{
     display: flex;
@@ -71,6 +74,7 @@ body{
     right: 5%;
     display: none;
     cursor: pointer;
+    z-index: 2;
 }
 .navbar-container .burguer-menu div{
     height: 6px;
@@ -617,7 +621,7 @@ footer{
         background-color: rgb(32, 32, 32);
         padding: 0 2rem;
         transition: transform 0.8s, border-radius 1s, opacity 0.5s;
-        opacity: 0;
+        
     }
     .hero-cards-container .hero-card h3 {
         font-size: 2.5rem;
@@ -948,5 +952,4 @@ footer{
 .nav-active{
     transform: translateY(70%);
     border-radius: 0 0 10px 10px !important;
-    opacity: 1 !important;
 }
